Intialize backend for memodraft

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=NoteOfTheDay
+spring.application.name=memodraft
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://shuttle.proxy.rlwy.net:58063/railway
