--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>4.0.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>noteOfTheDay</groupId>
-	<artifactId>NoteOfTheDay</artifactId>
+	<groupId>memodraft</groupId>
+	<artifactId>memodraft</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>NoteOfTheDay</name>
-	<description>Demo project for Spring Boot</description>
+	<name>memodraft</name>
+	<description>public notes web application</description>
 	<url/>
 	<licenses>
 		<license/>
